@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-30T08:17:14Z",
-  "count_outdated" : 304,
-  "uniques_outdated" : 157,
+  "timestamp" : "2022-05-30T16:16:57Z",
+  "count_outdated" : 305,
+  "uniques_outdated" : 158,
   "count" : 331,
   "uniques" : 177,
   "clones" : [
-    {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 3,
