@@ -1,3 +1,10 @@
+2022-05-30T16:16:57Z:
+* notice: last 14d: unq all: 12 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 157 304 / 177 331
+* notice: next accum: outdated-unq outdated-all / unq all: 158 305 / 177 331
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-30T08:17:14Z:
 * notice: last 14d: unq all: 12 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 157 304 / 176 330
